syntax = "proto2";

package signal;

option java_package         = "org.signal.libsignal.metadata";
option java_outer_classname = "SignalProtos";

message SenderCertificate {
    message Address {
        optional bytes  userId   = 1;
        optional uint32 deviceId = 2;
    }

    optional bytes address   = 1;
    optional bytes signature = 2;
}

message UnidentifiedSenderMessage {

    message Message {
        enum Type {
            PREKEY_MESSAGE = 1;
            MESSAGE        = 2;
        }

        optional Type              type              = 1;
        optional SenderCertificate senderCertificate = 2;
        optional bytes             content           = 3;
    }

    optional bytes ephemeralPublic  = 1;
    optional bytes encryptedStatic  = 2;
    optional bytes encryptedMessage = 3;
}